inizio lista utenti

--- a/javascript_http/index.html
+++ b/javascript_http/index.html
@@ -9,6 +9,12 @@
 <body>
     <h1>AJAX Asincronus Javascript And XML |</h1>
 
+    <ol id="lista_utenti">
+        <li>       </li>
+
+
+    </ol>
+
     <script type="module" src="main.js"></script>
 
 
