--- a/javascript_http/index.html
+++ b/javascript_http/index.html
@@ -9,10 +9,15 @@
 <body>
     <h1>AJAX Asincronus Javascript And XML |</h1>
 
-    <ol id="lista_utenti">
+    <ol id="lista_utenti_1">
         <li>       </li>
 
     </ol>
+    <h1>AJAX Asincronus Javascript And XML |</h1>
+
+    <div id="lista_utenti_2">
+
+    </div>
 
     <script type="module" src="main.js"></script>
 
